@@ -7228,3 +7228,9 @@ td.nowrap.has-context {
 	padding-top: 6px;
 	vertical-align: top;
 }
+.tooltip {
+	Width: 200px;
+}
+.tooltip-inner {
+	white-space: pre-wrap;
+}
