@@ -717,3 +717,11 @@ td.nowrap.has-context{
 	padding-top: 6px;
 	vertical-align: top;
 }
+
+/* Allowing bootstrap tooltips to wrap */
+.tooltip {
+	Width: 200px;
+}
+.tooltip-inner {
+	white-space: pre-wrap;
+}
