@@ -28,6 +28,7 @@ $ -> Language fix or change
 21-Jun-2013 Jean-Marie Simonet
  $ Missing language string (hardcoded)
  # [#31186] Some HTML errors. Thanks Achal Aggarwal
+ # [#31195] *Isis: Bootstrap tooltip displays only one line, truncates tip
 
 20-Jun-2013 Michael Babker
  ^ [#30479] Cleanup of unused variables.  Thanks Peter van Westen
